# odoo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
vs_ai/: __manifest__.py
vs_ai/controllers/: main.py
vs_ai/models/: __init__.py  vs_ai_model.py  vs_ai_provider.py
vs_ai/security/: ir.model.access.csv  vs_ai_security.xml
vs_ai/views/: vs_ai_menu_views.xml  vs_ai_model_views.xml  vs_ai_provider_views.xml
vs_ai/wizards/: __init__.py  vs_ai_setup_wizard.py  vs_ai_setup_wizard_views.xml
vs_core/: __manifest__.py
vs_core/controllers/: main.py
vs_core/models/: __init__.py  vs_config.py
vs_core/security/: ir.model.access.csv
vs_core/views/: vs_config_views.xml  vs_menu_views.xml
